--- a/index.html
+++ b/index.html
@@ -16,6 +16,96 @@
         <h1 class="title">What sould I add to my team?</h1>
         <div class="white-part"></div>
     </div>
-   
+    <main class="main">
+        <div class="column">
+            <div class="column-title-container">
+                <h2 class="column-title">Your types</h2>
+            </div>
+            <div class="types-container">
+                <div class="types-column">
+                     <div class="type normal">normal</div>
+                    <div class="type fighting">fighting</div>
+                    <div class="type flying">flying</div>
+                    <div class="type poison">poison</div>
+                    <div class="type ground">ground</div>
+                    <div class="type rock">rock</div>
+                    <div class="type bug">bug</div>
+                    <div class="type ghost">ghost</div>
+                    <div class="type steel">steel</div>
+                </div>
+                <div class="types-column">
+                    <div class="type fire">fire</div>
+                    <div class="type water">water</div>
+                    <div class="type grass">grass</div>
+                    <div class="type electric">electric</div>
+                    <div class="type psychic">psychic</div>
+                    <div class="type ice">ice</div>
+                    <div class="type dragon">dragon</div>
+                    <div class="type dark">dark</div>
+                    <div class="type fairy">fairy</div>
+                </div>
+               
+            </div>
+        </div>
+        <div class="separator"></div>
+        <div class="column">
+            <div class="column-title-container">
+                <h2 class="column-title">Types covered</h2>
+            </div>
+            <div class="types-container">
+                <div class="types-column">
+                     <div class="type normal">normal</div>
+                    <div class="type fighting">fighting</div>
+                    <div class="type flying">flying</div>
+                    <div class="type poison">poison</div>
+                    <div class="type ground">ground</div>
+                    <div class="type rock">rock</div>
+                    <div class="type bug">bug</div>
+                    <div class="type ghost">ghost</div>
+                    <div class="type steel">steel</div>
+                </div>
+                <div class="types-column">
+                    <div class="type fire">fire</div>
+                    <div class="type water">water</div>
+                    <div class="type grass">grass</div>
+                    <div class="type electric">electric</div>
+                    <div class="type psychic">psychic</div>
+                    <div class="type ice">ice</div>
+                    <div class="type dragon">dragon</div>
+                    <div class="type dark">dark</div>
+                    <div class="type fairy">fairy</div>
+                </div>
+            </div>
+        </div>
+        <div class="separator"></div>
+        <div class="column">
+            <div class="column-title-container">
+                <h2 class="column-title">Types you should include</h2>
+            </div>
+            <div class="types-container">
+                <div class="types-column">
+                     <div class="type normal">normal</div>
+                    <div class="type fighting">fighting</div>
+                    <div class="type flying">flying</div>
+                    <div class="type poison">poison</div>
+                    <div class="type ground">ground</div>
+                    <div class="type rock">rock</div>
+                    <div class="type bug">bug</div>
+                    <div class="type ghost">ghost</div>
+                    <div class="type steel">steel</div>
+                    <div class="type fire">fire</div>
+                    <div class="type water">water</div>
+                    <div class="type grass">grass</div>
+                    <div class="type electric">electric</div>
+                    <div class="type psychic">psychic</div>
+                    <div class="type ice">ice</div>
+                    <div class="type dragon">dragon</div>
+                    <div class="type dark">dark</div>
+                    <div class="type fairy">fairy</div>
+                </div>
+               
+            </div>
+        </div>
+    </main>
 </body>
 </html>
