--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>What sould I add to my team?</title>
     <link rel="shortcut icon" href="img/icon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/type-colors.css">
     <script type="module" src="./script/app.js"></script>
 </head>
 <body>
@@ -21,30 +22,25 @@
             <div class="column-title-container">
                 <h2 class="column-title">Your types</h2>
             </div>
-            <div class="types-container">
-                <div class="types-column">
-                     <div class="type normal">normal</div>
-                    <div class="type fighting">fighting</div>
-                    <div class="type flying">flying</div>
-                    <div class="type poison">poison</div>
-                    <div class="type ground">ground</div>
-                    <div class="type rock">rock</div>
-                    <div class="type bug">bug</div>
-                    <div class="type ghost">ghost</div>
-                    <div class="type steel">steel</div>
-                </div>
-                <div class="types-column">
-                    <div class="type fire">fire</div>
-                    <div class="type water">water</div>
-                    <div class="type grass">grass</div>
-                    <div class="type electric">electric</div>
-                    <div class="type psychic">psychic</div>
-                    <div class="type ice">ice</div>
-                    <div class="type dragon">dragon</div>
-                    <div class="type dark">dark</div>
-                    <div class="type fairy">fairy</div>
-                </div>
-               
+            <div class="types-container selector">
+                <div class="type normal">normal</div>
+                <div class="type fighting">fighting</div>
+                <div class="type flying">flying</div>
+                <div class="type poison">poison</div>
+                <div class="type ground">ground</div>
+                <div class="type rock">rock</div>
+                <div class="type bug">bug</div>
+                <div class="type ghost">ghost</div>
+                <div class="type steel">steel</div>
+                <div class="type fire">fire</div>
+                <div class="type water">water</div>
+                <div class="type grass">grass</div>
+                <div class="type electric">electric</div>
+                <div class="type psychic">psychic</div>
+                <div class="type ice">ice</div>
+                <div class="type dragon">dragon</div>
+                <div class="type dark">dark</div>
+                <div class="type fairy">fairy</div>               
             </div>
         </div>
         <div class="separator"></div>
@@ -53,57 +49,50 @@
                 <h2 class="column-title">Types covered</h2>
             </div>
             <div class="types-container">
-                <div class="types-column">
-                     <div class="type normal">normal</div>
-                    <div class="type fighting">fighting</div>
-                    <div class="type flying">flying</div>
-                    <div class="type poison">poison</div>
-                    <div class="type ground">ground</div>
-                    <div class="type rock">rock</div>
-                    <div class="type bug">bug</div>
-                    <div class="type ghost">ghost</div>
-                    <div class="type steel">steel</div>
-                </div>
-                <div class="types-column">
-                    <div class="type fire">fire</div>
-                    <div class="type water">water</div>
-                    <div class="type grass">grass</div>
-                    <div class="type electric">electric</div>
-                    <div class="type psychic">psychic</div>
-                    <div class="type ice">ice</div>
-                    <div class="type dragon">dragon</div>
-                    <div class="type dark">dark</div>
-                    <div class="type fairy">fairy</div>
-                </div>
+                <div class="type normal active">normal</div>
+                <div class="type fighting active">fighting</div>
+                <div class="type flying active">flying</div>
+                <div class="type poison active">poison</div>
+                <div class="type ground active">ground</div>
+                <div class="type rock active">rock</div>
+                <div class="type bug active">bug</div>
+                <div class="type ghost active">ghost</div>
+                <div class="type steel active">steel</div>
+                <div class="type fire active">fire</div>
+                <div class="type water active">water</div>
+                <div class="type grass active">grass</div>
+                <div class="type electric active">electric</div>
+                <div class="type psychic active">psychic</div>
+                <div class="type ice active">ice</div>
+                <div class="type dragon active">dragon</div>
+                <div class="type dark active">dark</div>
+                <div class="type fairy active">fairy</div>
             </div>
         </div>
         <div class="separator"></div>
         <div class="column">
             <div class="column-title-container">
-                <h2 class="column-title">Types you should include</h2>
+                <h2 class="column-title">Types to include</h2>
             </div>
             <div class="types-container">
-                <div class="types-column">
-                     <div class="type normal">normal</div>
-                    <div class="type fighting">fighting</div>
-                    <div class="type flying">flying</div>
-                    <div class="type poison">poison</div>
-                    <div class="type ground">ground</div>
-                    <div class="type rock">rock</div>
-                    <div class="type bug">bug</div>
-                    <div class="type ghost">ghost</div>
-                    <div class="type steel">steel</div>
-                    <div class="type fire">fire</div>
-                    <div class="type water">water</div>
-                    <div class="type grass">grass</div>
-                    <div class="type electric">electric</div>
-                    <div class="type psychic">psychic</div>
-                    <div class="type ice">ice</div>
-                    <div class="type dragon">dragon</div>
-                    <div class="type dark">dark</div>
-                    <div class="type fairy">fairy</div>
-                </div>
-               
+                <div class="type normal">normal</div>
+                <div class="type fighting">fighting</div>
+                <div class="type flying">flying</div>
+                <div class="type poison">poison</div>
+                <div class="type ground">ground</div>
+                <div class="type rock">rock</div>
+                <div class="type bug">bug</div>
+                <div class="type ghost">ghost</div>
+                <div class="type steel">steel</div>
+                <div class="type fire">fire</div>
+                <div class="type water">water</div>
+                <div class="type grass">grass</div>
+                <div class="type electric">electric</div>
+                <div class="type psychic">psychic</div>
+                <div class="type ice">ice</div>
+                <div class="type dragon">dragon</div>
+                <div class="type dark">dark</div>
+                <div class="type fairy">fairy</div>
             </div>
         </div>
     </main>
