types-controller wip

--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
                 <h2 class="column-title">Your types</h2>
             </div>
             <div class="types-container selector">
-                <div class="type normal">normal</div>
-                <div class="type fighting">fighting</div>
-                <div class="type flying">flying</div>
-                <div class="type poison">poison</div>
-                <div class="type ground">ground</div>
-                <div class="type rock">rock</div>
-                <div class="type bug">bug</div>
-                <div class="type ghost">ghost</div>
-                <div class="type steel">steel</div>
-                <div class="type fire">fire</div>
-                <div class="type water">water</div>
-                <div class="type grass">grass</div>
-                <div class="type electric">electric</div>
-                <div class="type psychic">psychic</div>
-                <div class="type ice">ice</div>
-                <div class="type dragon">dragon</div>
-                <div class="type dark">dark</div>
-                <div class="type fairy">fairy</div>               
+                <div class="type normal" data-type-id="0">normal</div>
+                <div class="type fighting" data-type-id="1">fighting</div>
+                <div class="type flying" data-type-id="2">flying</div>
+                <div class="type poison" data-type-id="3">poison</div>
+                <div class="type ground" data-type-id="4">ground</div>
+                <div class="type rock" data-type-id="5">rock</div>
+                <div class="type bug" data-type-id="6">bug</div>
+                <div class="type ghost" data-type-id="7">ghost</div>
+                <div class="type steel" data-type-id="8">steel</div>
+                <div class="type fire" data-type-id="9">fire</div>
+                <div class="type water" data-type-id="10">water</div>
+                <div class="type grass" data-type-id="11">grass</div>
+                <div class="type electric" data-type-id="12">electric</div>
+                <div class="type psychic" data-type-id="13">psychic</div>
+                <div class="type ice" data-type-id="14">ice</div>
+                <div class="type dragon" data-type-id="15">dragon</div>
+                <div class="type dark" data-type-id="16">dark</div>
+                <div class="type fairy" data-type-id="17">fairy</div>               
             </div>
         </div>
         <div class="separator"></div>
@@ -48,7 +48,7 @@
             <div class="column-title-container">
                 <h2 class="column-title">Types covered</h2>
             </div>
-            <div class="types-container">
+            <div class="types-container covered">
                 <div class="type normal active">normal</div>
                 <div class="type fighting active">fighting</div>
                 <div class="type flying active">flying</div>
