--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <div class="column">
             <div class="column-title-container">
                 <h2 class="column-title">Your types</h2>
+                <button class="reset-types button">
+                    <svg class="reset-icon" viewBox="0 0 550 500">
+                        <path d="M196.396 127.841C218.948 113.383 245.768 105 274.546 105C354.627 105 419.546 169.919 419.546 250C419.546 250.334 419.545 250.667 419.543 251H356.049L448.538 412.815L541.028 251H489.544C489.545 250.667 489.546 250.334 489.546 250C489.546 131.259 393.287 35 274.546 35C233.159 35 194.503 46.6941 161.703 66.9583L196.396 127.841Z" fill="#B9F4FF"/>
+                        <path d="M59.5461 250L8 250L99.3251 90.2225L190.65 250H129.546C129.546 330.081 194.465 395 274.546 395C302.446 395 328.505 387.121 350.619 373.465L385.801 434.014C353.344 453.679 315.267 465 274.546 465C155.805 465 59.5461 368.741 59.5461 250Z" fill="#B9F4FF"/>
+                    </svg>
+                </button>
             </div>
             <div class="types-container selector">
                 <div class="type normal" data-type-id="0">normal</div>
@@ -47,6 +53,7 @@
         <div class="column">
             <div class="column-title-container">
                 <h2 class="column-title">Types covered</h2>
+                <button class="recomend-types button">Recomend types</button>
             </div>
             <div class="types-container covered">
                 <div class="type normal">normal</div>
@@ -70,31 +77,6 @@
             </div>
         </div>
         <div class="separator"></div>
-        <div class="column">
-            <div class="column-title-container">
-                <h2 class="column-title">Types to include</h2>
-            </div>
-            <div class="types-container">
-                <div class="type normal">normal</div>
-                <div class="type fighting">fighting</div>
-                <div class="type flying">flying</div>
-                <div class="type poison">poison</div>
-                <div class="type ground">ground</div>
-                <div class="type rock">rock</div>
-                <div class="type bug">bug</div>
-                <div class="type ghost">ghost</div>
-                <div class="type steel">steel</div>
-                <div class="type fire">fire</div>
-                <div class="type water">water</div>
-                <div class="type grass">grass</div>
-                <div class="type electric">electric</div>
-                <div class="type psychic">psychic</div>
-                <div class="type ice">ice</div>
-                <div class="type dragon">dragon</div>
-                <div class="type dark">dark</div>
-                <div class="type fairy">fairy</div>
-            </div>
-        </div>
     </main>
 </body>
 </html>
