buttons css finished

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="column">
             <div class="column-title-container">
                 <h2 class="column-title">Your types</h2>
-                <button class="reset-types button">
-                    <svg class="reset-icon" viewBox="0 0 550 500">
+                <button class="reset-types button" title="reset">
+                    <svg class="reset icon" viewBox="0 0 550 500">
                         <path d="M196.396 127.841C218.948 113.383 245.768 105 274.546 105C354.627 105 419.546 169.919 419.546 250C419.546 250.334 419.545 250.667 419.543 251H356.049L448.538 412.815L541.028 251H489.544C489.545 250.667 489.546 250.334 489.546 250C489.546 131.259 393.287 35 274.546 35C233.159 35 194.503 46.6941 161.703 66.9583L196.396 127.841Z" fill="#B9F4FF"/>
                         <path d="M59.5461 250L8 250L99.3251 90.2225L190.65 250H129.546C129.546 330.081 194.465 395 274.546 395C302.446 395 328.505 387.121 350.619 373.465L385.801 434.014C353.344 453.679 315.267 465 274.546 465C155.805 465 59.5461 368.741 59.5461 250Z" fill="#B9F4FF"/>
                     </svg>
@@ -53,7 +53,13 @@
         <div class="column">
             <div class="column-title-container">
                 <h2 class="column-title">Types covered</h2>
-                <button class="recomend-types button">Recomend types</button>
+                <button class="recomend-types button" title="Recomend types">
+                    <svg class="recomend icon" viewBox="0 0 550 500">
+                        <path d="M188.754 290.035C199.587 322.205 230.026 345.377 265.886 345.377C301.745 345.377 332.185 322.206 343.018 290.035H477.698C464.826 397.052 373.611 480 263 480C152.389 480 61.1736 397.052 48.3019 290.035H188.754Z" fill="#B9F4FF"/>
+                        <path d="M265.893 216.823C292.336 216.823 313.236 238.784 313.236 264.111C313.236 289.607 292.472 311.4 265.893 311.4C239.319 311.4 218.549 289.574 218.549 264.111C218.549 238.948 240.192 216.823 265.893 216.823Z" fill="#B9F4FF"/>
+                        <path d="M263 48C374.522 48 466.326 132.318 478 240.612H343.791C333.698 207.189 302.638 182.847 265.886 182.847C229.133 182.848 198.073 207.189 187.981 240.612H48C59.6736 132.318 151.478 48 263 48Z" fill="#B9F4FF"/>
+                    </svg>
+                </button>
             </div>
             <div class="types-container covered">
                 <div class="type normal">normal</div>
@@ -76,7 +82,6 @@
                 <div class="type fairy">fairy</div>
             </div>
         </div>
-        <div class="separator"></div>
     </main>
 </body>
 </html>
