Recomend type UI

--- a/index.html
+++ b/index.html
@@ -83,5 +83,32 @@
             </div>
         </div>
     </main>
+    <div class="modal-background active">
+        <div class="modal">
+            <header class="modal-header">
+                <h3 class="modal-title">Recomended types to include:</h3>
+                <button class="close-modal-button">X</button>
+            </header>
+            <main class="modal-main">
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Fighting_(type)#Pok%C3%A9mon" target="_blank" class="type fighting">fighting</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Flying_(type)#Pok%C3%A9mon" target="_blank" class="type flying">flying</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Poison_(type)#Pok%C3%A9mon" target="_blank" class="type poison">poison</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Ground_(type)#Pok%C3%A9mon" target="_blank" class="type ground">ground</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Rock_(type)#Pok%C3%A9mon" target="_blank" class="type rock">rock</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Bug_(type)#Pok%C3%A9mon" target="_blank" class="type bug">bug</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Ghost_(type)#Pok%C3%A9mon" target="_blank" class="type ghost">ghost</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Steel_(type)#Pok%C3%A9mon" target="_blank" class="type steel">steel</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Fire_(type)#Pok%C3%A9mon" target="_blank" class="type fire">fire</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Water_(type)#Pok%C3%A9mon" target="_blank" class="type water">water</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Grass_(type)#Pok%C3%A9mon" target="_blank" class="type grass">grass</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Electric_(type)#Pok%C3%A9mon" target="_blank" class="type electric">electric</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Psychic_(type)#Pok%C3%A9mon" target="_blank" class="type psychic">psychic</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Ice_(type)#Pok%C3%A9mon" target="_blank" class="type ice">ice</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Fairy_(type)#Pok%C3%A9mon" target="_blank" class="type fairy">fairy</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Dragon_(type)#Pok%C3%A9mon" target="_blank" class="type dragon">dragon</a>
+                <a href="https://bulbapedia.bulbagarden.net/wiki/Dark_(type)#Pok%C3%A9mon" target="_blank" class="type dark">dark</a>
+            </main>
+        </div>
+    </div>
 </body>
 </html>
