--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
                 <button class="close-modal-button">X</button>
             </header>
             <main class="modal-main">
+                <div class="filter-container">
+                    <select class="filter" title="Filter types">
+                        <option value="all" selected>All types</option>
+                        <option value="highly">Highly recomended</option>
+                    </select>
+                </div>
                 <div class="types-container to-include">
                     <a href="https://bulbapedia.bulbagarden.net/wiki/Fighting_(type)#Pok%C3%A9mon" target="_blank" class="type fighting">fighting</a>
                     <a href="https://bulbapedia.bulbagarden.net/wiki/Flying_(type)#Pok%C3%A9mon" target="_blank" class="type flying">flying</a>
