no type message and dragon exception

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                         <option value="highly">Highly recomended</option>
                     </select>
                 </div>
+                <p class="no-types active">No types recomended</p>
                 <div class="types-container to-include">
                     <a href="https://bulbapedia.bulbagarden.net/wiki/Fighting_(type)#Pok%C3%A9mon" target="_blank" class="type fighting">fighting</a>
                     <a href="https://bulbapedia.bulbagarden.net/wiki/Flying_(type)#Pok%C3%A9mon" target="_blank" class="type flying">flying</a>
